--- a/text_summarization.ipynb
+++ b/text_summarization.ipynb
@@ -1728,6 +1728,30 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "errhu8b4Owyd",
+        "colab_type": "text"
+      },
+      "source": [
+        "**\n",
+        "I hope that you found this project to be rather interesting and informative. One of my main recommendations for working with this dataset and model is either use a GPU, a subset of the dataset, or plenty of time to train your model. As you might be able to expect, the model will not be able to make good predictions just by seeing many reviews, it needs so see the reviews many times to be able to understand the relationship between words and between descriptions & summaries.I'll try to improve this model and if it gets better, I'll update my GitHub.**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bLeTVSerPCZI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
